# StudySample

./: README.md
AIDLDemo/: README.md  build.gradle  gradle.properties  settings.gradle
AIDLDemo/client/: build.gradle
AIDLDemo/client/src/main/: AndroidManifest.xml
AIDLDemo/client_server/: build.gradle
AIDLDemo/client_server/src/main/: AndroidManifest.xml
AIDLDemo/client_server/src/main/res/layout/: activity_main.xml
AIDLDemo/client_server/src/main/res/values/: strings.xml
AIDLDemo/doc/: startService与bindService的区别.md
AIDLDemo/gradle/wrapper/: gradle-wrapper.properties
AIDLDemo/remoteserver/: build.gradle
AIDLDemo/remoteserver/src/main/: AndroidManifest.xml
AIDLDemo/remoteserver/src/main/res/layout/: activity_main.xml
AIDLDemo/remoteserver/src/main/res/values/: strings.xml
AIDLDemo/remoteservicecontract/src/main/: AndroidManifest.xml
AccessibilityDemo/app/: build.gradle
AccessibilityDemo/app/src/main/: AndroidManifest.xml
AccessibilityDemo/app/src/main/assets/: app-debug.apk
AccessibilityDemo/gradle/wrapper/: gradle-wrapper.properties
AlipayDemo/: build.gradle
AlipayDemo/app/: build.gradle
AlipayDemo/app/src/main/: AndroidManifest.xml
AlipayDemo/gradle/wrapper/: gradle-wrapper.properties
BottomNavigationViewDemo/app/: build.gradle
BottomNavigationViewDemo/app/src/main/: AndroidManifest.xml
BottomNavigationViewDemo/gradle/wrapper/: gradle-wrapper.properties
CircularImageViewDemo/app/: build.gradle
CircularImageViewDemo/app/src/main/: AndroidManifest.xml
ConstraintLayoutDemo/app/: build.gradle  proguard-rules.pro
ConstraintLayoutDemo/app/src/main/: AndroidManifest.xml
ConstraintLayoutDemo/gradle/wrapper/: gradle-wrapper.properties
CoordinatorLayoutDemo/: build.gradle
CoordinatorLayoutDemo/app/: build.gradle
CoordinatorLayoutDemo/app/src/main/: AndroidManifest.xml
CoordinatorLayoutDemo/gradle/wrapper/: gradle-wrapper.properties
CustomViewDemo/app/: build.gradle
CustomViewDemo/app/src/main/: AndroidManifest.xml
DevelopStudyDemo/: settings.gradle
DevelopStudyDemo/app/: build.gradle
DevelopStudyDemo/app/src/main/: AndroidManifest.xml
DevelopStudyDemo/gradle/wrapper/: gradle-wrapper.properties
DoubleClickDetectDemo/app/: build.gradle
DoubleClickDetectDemo/app/src/main/: AndroidManifest.xml
DownloadServiceDemo/app/: build.gradle
DownloadServiceDemo/app/src/main/: AndroidManifest.xml
DownloadServiceDemo/gradle/wrapper/: gradle-wrapper.properties
DraggableCircleDemo/app/: build.gradle
DraggableCircleDemo/app/src/main/: AndroidManifest.xml
DraggableCircleDemo/gradle/wrapper/: gradle-wrapper.properties
FlipClockDemo/: settings.gradle
FlipClockDemo/app/: build.gradle
FlipClockDemo/app/src/main/: AndroidManifest.xml
FlipClockDemo/gradle/wrapper/: gradle-wrapper.properties
GreenDaoDemo/: build.gradle
GreenDaoDemo/app/: build.gradle
GreenDaoDemo/app/src/main/: AndroidManifest.xml
GreenDaoDemo/gradle/wrapper/: gradle-wrapper.properties
JetpackNavigationDemo/app/: build.gradle
JetpackNavigationDemo/app/src/main/: AndroidManifest.xml
JetpackNavigationDemo/gradle/wrapper/: gradle-wrapper.properties
JpushDemo/app/: build.gradle  proguard-rules.pro
JpushDemo/app/src/main/: AndroidManifest.xml
KeyboardViewDemo/app/: build.gradle
KeyboardViewDemo/app/src/main/: AndroidManifest.xml
MarqueeViewDemo/: build.gradle
MarqueeViewDemo/app/: build.gradle
MarqueeViewDemo/app/src/main/: AndroidManifest.xml
MarqueeViewDemo/gradle/wrapper/: gradle-wrapper.properties
NDKDemo/: README.md  settings.gradle
NDKDemo/JNIDemo/: README.md  build.gradle
NDKDemo/JNIDemo/src/main/: AndroidManifest.xml
NDKDemo/JNIDemo/src/main/jni/: com_chang_jni_demo_JNITest.h  test.c  test.cpp
NDKDemo/NativeApp/: README.md
NDKDemo/gradle/wrapper/: gradle-wrapper.properties
NDKDemo/sample/: build.gradle
NDKDemo/seclib/: README.md  build.gradle
NDKDemo/seclib/src/main/: AndroidManifest.xml
NDKDemo/seclib/src/main/jni/: Android.mk  com_planet_light2345_seclib_SecService.c
NativeDemo/: README.md  build.gradle  gradle.properties  settings.gradle
NativeDemo/JNADemo/: README.md  build.gradle  make_so.sh
NativeDemo/JNADemo/src/main/: AndroidManifest.xml
NativeDemo/JNADemo/src/main/cpp/: CMakeLists.txt  JNADemo.cpp  jna-usage.c
NativeDemo/JNIDemo/: README.md  build.gradle  make_so1.sh
NativeDemo/JNIDemo/src/main/cpp/: CMakeLists.txt  JNIDemo.cpp  usage.c
NativeDemo/JNIDemo/src/main/jni/: test.c  test.cpp
NativeDemo/NDKDemo/: CMakeLists.txt  CMakeLists_doc.txt  README.md  build.gradle
NativeDemo/NDKDemo/src/main/: AndroidManifest.xml
NativeDemo/NDKDemo/src/main/cpp/: CMakeLists.txt  jni-callback-test.cpp  jni-test.cpp  native-lib.cpp
NativeDemo/NDKDemo/src/main/java/com/chang/android/ndk/: JNITest.java  JniCallbackTest.java
NativeDemo/NativeApp/src/main/: AndroidManifest.xml
NativeDemo/sample/: build.gradle
NativeDemo/sample/src/main/: AndroidManifest.xml
NativeDemo/seclib/: build.gradle
NativeDemo/seclib/src/main/jni/: Android.mk  Application.mk  b64.h  com_planet_light2345_seclib_SecService.h  encode.c  md5.c  md5.h
QuestionDemo/app/: build.gradle
QuestionDemo/app/src/main/: AndroidManifest.xml
RestudyAndroid/: settings.gradle
RestudyAndroid/app/: build.gradle
RestudyAndroid/app/src/main/: AndroidManifest.xml
RestudyAndroid/gradle/wrapper/: gradle-wrapper.properties
RuntimePermissionsDemo/app/: build.gradle
RuntimePermissionsDemo/app/src/main/: AndroidManifest.xml
SateliteMenuDemo/app/: build.gradle
SateliteMenuDemo/app/src/main/: AndroidManifest.xml
SwipeListViewDemo/app/: build.gradle
SwipeListViewDemo/app/src/main/: AndroidManifest.xml
TBoxNetDemo/: build.gradle  config.gradle  platform.jks  settings.gradle
TBoxNetDemo/app/: build.gradle
TBoxNetDemo/app/src/main/: AndroidManifest.xml
TBoxNetDemo/gradle/wrapper/: gradle-wrapper.properties
WiFiAnalyzerDemo/: settings.gradle
WiFiAnalyzerDemo/app/: build.gradle
WiFiAnalyzerDemo/app/src/main/: AndroidManifest.xml
WiFiAnalyzerDemo/gradle/wrapper/: gradle-wrapper.properties
(+338 files in other folders)
